# segmentation-pytorch

./: pyproject.toml  requirements.txt  setup.py
segmentation/: baseline.py  callback.py  custom_model.py  dataset.py  losses.py  metrics.py  model.py  model_builder.py  modules.py  multi_head_network.py  network.py  network_postprocessor.py  optimizer.py  settings.py  stats.py  util.py
segmentation/binarization/: doxapy_bin.py  ocrupus.py
segmentation/datasets/: dataset.py
segmentation/gui/: gui.py  xml_util.py
segmentation/postprocessing/: baseline_extraction.py  baseline_graph.py  dewarp.py  find_div_path.pyx  layout_analysis.py  layout_line_segment.py  layout_line_util.py
segmentation/preprocessing/: ocrupus.py  source_image.py  util.py  workflow.py
segmentation/scripts/: convert.py  convert_transforms_pipeline.py  predict.py  predict_mask.py  train.py  train_mask.py
segmentation/test/: test_color_map.py  test_predict.py  test_train.py
